--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script/script.js" defer></script>
+    <script src="script/main.js" type="module" defer></script>
 </head>
 
 <body>
