style: style table and table children

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
     </main>
     <footer>
-        <p>Autor: Kaíky Rodrigues</p>
+        <p>Dev: Kaíky Rodrigues (<a href="https://github.com/ykiak">GitHub</a> | <a href="https://www.linkedin.com/in/ka%C3%ADky-rodrigues-de-oliveira-08547529a/">Linkedin</a>)</p>
     </footer>
 </body>
 
